--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,4 +1,4 @@
-name: Python Tests
+name: Test Suite
 
 on:
   pull_request:
@@ -11,14 +11,24 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
+
       - uses: actions/setup-python@v4
         with:
           python-version: '3.12'
 
-      - name: Install dependencies
+      - name: Install Python dependencies
         run: |
           python -m pip install --upgrade pip
           pip install numpy inflect pytest
 
-      - name: Run tests
+      - name: Run Python tests
         run: pytest -q
+
+      - uses: actions/setup-node@v3
+        with:
+          node-version: '20'
+
+      - name: Run JS/TS tests
+        run: |
+          cd services/cephalon && npm ci && npm test && cd ../..
+          cd services/discord-embedder && npm ci && npm test && cd ../..
