--- a/services/cephalon/package.json
+++ b/services/cephalon/package.json
@@ -5,14 +5,14 @@
     "main": "dist/index.js",
     "type": "module",
     "scripts": {
-        "build": "rimraf dist && tsc",
+        "build": "tsc && node scripts/patch-imports.js",
+        "start": "node dist/index.js",
         "test": "ava",
         "build:check": "tsc --noEmit --incremental false",
         "deploy": "npm run build && node --env-file=../../.env dist/util/deploy.js",
         "lint": "prettier --cache --check . && eslint src --ext mjs,js,ts --cache",
         "format": "prettier --cache --write . && eslint src --ext mjs,js,ts --fix --cache",
-        "start": "npm run build && node --env-file=../../.env dist/index.js",
-        "start:dev": "node --env-file=../../.env --loader ts-node/esm  src/index.ts"
+        "start:dev": "node  --loader ts-node/esm  src/index.ts"
     },
     "keywords": [
         "discord",
@@ -29,6 +29,8 @@
         "@chroma-core/default-embed": "^0.1.8",
         "@discordjs/opus": "^0.10.0",
         "@discordjs/voice": "^0.18.0",
+        "@types/sbd": "^1.0.5",
+        "@types/screenshot-desktop": "^1.12.3",
         "@types/wav": "^1.0.4",
         "chromadb": "^3.0.9",
         "discord.js": "^14.17.3",
@@ -41,6 +43,7 @@
         "pnpm": "^10.13.1",
         "prism-media": "^2.0.0-alpha.0",
         "sbd": "^1.0.19",
+        "screenshot-desktop": "^1.15.1",
         "wav": "^1.0.2"
     },
     "devDependencies": {
@@ -49,7 +52,9 @@
         "eslint": "^8.57.0",
         "eslint-config-neon": "^0.1.62",
         "prettier": "^3.4.2",
+        "rewrite-imports": "^3.0.0",
         "rimraf": "^6.0.1",
+        "source-map-support": "^0.5.21",
         "ts-node": "^10.9.2",
         "typescript": "5.7.3"
     },
