--- a/services/cephalon/tsconfig.json
+++ b/services/cephalon/tsconfig.json
@@ -17,12 +17,13 @@
 
 		// Modules
 		"allowArbitraryExtensions": true,
-		"allowImportingTsExtensions": true,
-		"module": "ESNext",
-		"moduleResolution": "Bundler",
-		"resolveJsonModule": true,
-		"resolvePackageJsonExports": true,
-		"resolvePackageJsonImports": true,
+		// "allowImportingTsExtensions": true,
+      "allowJs": true,
+		"module": "es2022",
+		"moduleResolution": "bundler",
+		// "resolveJsonModule": true,
+		// "resolvePackageJsonExports": true,
+		// "resolvePackageJsonImports": true,
 
 		// Emit
 		"declaration": true,
@@ -52,3 +53,4 @@
 	"include": ["src/**/*.ts"],
 	"exclude": ["node_modules"]
 }
+
