--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Install Python dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install numpy inflect pytest discord
+          pip install numpy inflect pytest discord pytest-asyncio
 
       - name: Run Python tests
         run: pytest -q
