--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -31,4 +31,7 @@ jobs:
       - name: Run JS/TS tests
         run: |
           cd services/cephalon && npm ci && npm test && cd ../..
+
+      - name: Run Embedder Tests
+        run: |
           cd services/discord-embedder && npm ci && npm test && cd ../..
