--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
+    "scripts": {
+        "test": "npm --prefix services/cephalon test && npm --prefix services/discord-embedder test"
+    },
     "dependencies": {
         "@discordjs/voice": "^0.18.0",
         "@huggingface/transformers": "^3.6.1",
@@ -11,6 +14,7 @@
     },
     "devDependencies": {
         "@types/sbd": "^1.0.5",
-        "@types/screenshot-desktop": "^1.12.3"
+        "@types/screenshot-desktop": "^1.12.3",
+        "ava": "^6.4.1"
     }
 }
