--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Install Python dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install numpy inflect pytest discord pytest-asyncio pymongo pytest-cov uvicorn
+          pip install numpy inflect pytest discord pytest-asyncio pymongo pytest-cov uvicorn websockets fastapi
 
       - name: Run Python tests with coverage
         run: pytest --cov=./ --cov-report=xml --cov-report=term
