--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -16,32 +16,30 @@ jobs:
         with:
           python-version: '3.12'
 
-      - name: Install Python dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install numpy inflect pytest discord pytest-asyncio pymongo pytest-cov uvicorn websockets fastapi httpx scipy soundfile
+      - name: Install pipenv
+        run: python -m pip install pipenv
 
-      - name: Run Python tests with coverage
-        run: pytest --cov=./ --cov-report=xml --cov-report=term
+      - uses: actions/setup-node@v3
+        with:
+          node-version: '20'
+
+      - name: Project setup
+        run: make setup
+
+      - name: Build project
+        run: make build
+
+      - name: Lint
+        run: make lint
+
+      - name: Run tests with coverage
+        run: make coverage
 
       - name: Upload Python coverage
         uses: actions/upload-artifact@v4
         with:
           name: python-coverage
           path: coverage.xml
-
-      - uses: actions/setup-node@v3
-        with:
-          node-version: '20'
-
-      - name: Install JS/TS dependencies
-        run: |
-          npm install
-          npm --prefix services/cephalon install --no-package-lock
-          npm --prefix services/discord-embedder install --no-package-lock
-
-      - name: Run JS/TS tests with coverage
-        run: npx c8 --reporter=text --reporter=lcov npm test
 
       - name: Upload JS coverage
         uses: actions/upload-artifact@v4
