feat(duck): include new services

--- a/agents/duck/.env.example
+++ b/agents/duck/.env.example
@@ -15,3 +15,6 @@ PROFILE_CHANNEL=<profile_channel>
 DEFAULT_CHANNEL=<dump_channel_name>
 
 DEFAULT_CHANNEL_NAME=<channel_name_to_dump_unassigned_agent_messages>
+
+# URL for the vision service used by Cephalon
+VISION_HOST=http://localhost:5003
