--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -14,21 +14,10 @@ jobs:
 
       - uses: actions/setup-python@v4
         with:
-          python-version: '3.12'
+          python-version: '3.11'
 
-      - name: Install Python dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install numpy inflect pytest discord pytest-asyncio pymongo pytest-cov uvicorn websockets fastapi httpx scipy soundfile
-
-      - name: Run Python tests with coverage
-        run: pytest --cov=./ --cov-report=xml --cov-report=term
-
-      - name: Upload Python coverage
-        uses: actions/upload-artifact@v4
-        with:
-          name: python-coverage
-          path: coverage.xml
+      - name: Install system dependencies
+        run: sudo apt-get update && sudo apt-get install -y libsndfile1
 
       - uses: actions/setup-node@v3
         with:
@@ -39,6 +28,21 @@ jobs:
           npm install
           npm --prefix services/cephalon install --no-package-lock
           npm --prefix services/discord-embedder install --no-package-lock
+          npm --prefix services/vision install --no-package-lock
+
+      - name: Install Python dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install numpy inflect pytest discord pytest-asyncio pymongo pytest-cov uvicorn websockets fastapi httpx scipy soundfile requests
+
+      - name: Run Python tests with coverage
+        run: pytest --cov=./ --cov-report=xml --cov-report=term
+
+      - name: Upload Python coverage
+        uses: actions/upload-artifact@v4
+        with:
+          name: python-coverage
+          path: coverage.xml
 
       - name: Run JS/TS tests with coverage
         run: npx c8 --reporter=text --reporter=lcov npm test
