--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "scripts": {
-    "test": "npm --prefix services/cephalon test && npm --prefix services/discord-embedder test"
+    "test": "ava tests/**/*.js && npm --prefix services/cephalon test && npm --prefix services/discord-embedder test"
   },
   "dependencies": {
     "@discordjs/voice": "^0.18.0",
@@ -13,6 +13,12 @@
     "@types/sbd": "^1.0.5",
     "@types/screenshot-desktop": "^1.12.3",
     "ava": "^6.4.1",
-    "c8": "^10.1.3"
+    "c8": "^10.1.3",
+    "puppeteer": "^24.15.0"
+  },
+  "ava": {
+    "files": [
+      "tests/**/*.js"
+    ]
   }
 }
