--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -17,38 +17,23 @@ jobs:
           python-version: '3.11'
 
       - name: Install system dependencies
-        run: sudo apt-get update && sudo apt-get install -y libsndfile1
+        run: make system-deps
 
       - uses: actions/setup-node@v3
         with:
           node-version: '20'
 
-      - name: Install JS/TS dependencies
-        run: |
-          npm install
-          npm --prefix services/cephalon install --no-package-lock
-          npm --prefix services/discord-embedder install --no-package-lock
-          npm --prefix services/vision install --no-package-lock
-
-      - name: Install Python dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install numpy inflect pytest discord pytest-asyncio pymongo pytest-cov uvicorn websockets fastapi httpx scipy soundfile requests
-      - name: Install pipenv
-        run: python -m pip install pipenv
-
-      - uses: actions/setup-node@v3
-        with:
-          node-version: '20'
-
-      - name: Project setup
-        run: make setup
+      - name: Install dependencies
+        run: make install
 
       - name: Build project
         run: make build
 
       - name: Lint
         run: make lint
+
+      - name: Format
+        run: make format
 
       - name: Run tests with coverage
         run: make coverage
@@ -60,7 +45,7 @@ jobs:
           path: coverage.xml
 
       - name: Run JS/TS tests with coverage
-        run: npx c8 --reporter=text --reporter=lcov npm test
+        run: make coverage-js
 
       - name: Upload JS coverage
         uses: actions/upload-artifact@v4
