--- a/services/cephalon/package.json
+++ b/services/cephalon/package.json
@@ -7,7 +7,7 @@
     "scripts": {
         "build": "tsc || true && node scripts/patch-imports.js",
         "start": "node dist/src/index.js",
-        "test": "npm run build && ava",
+        "test": "npm run build && ava dist/tests/test.js",
         "build:check": "tsc --noEmit --incremental false",
         "deploy": "npm run build && node --env-file=../../.env dist/util/deploy.js",
         "lint": "prettier --cache --check . && eslint src --ext mjs,js,ts --cache",
