--- a/services/llm/package.json
+++ b/services/llm/package.json
@@ -5,10 +5,13 @@
   "main": "index.js",
   "scripts": {
     "start": "node src/index.js",
-    "test": "echo 'no tests'"
+    "test": "ava"
   },
   "dependencies": {
     "express": "^4.18.2",
     "ollama": "^0.5.16"
+  },
+  "devDependencies": {
+    "ava": "^6.4.1"
   }
 }
