--- a/services/voice/package.json
+++ b/services/voice/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "tsc",
     "start": "node dist/index.js",
-    "test": "TS_NODE_TRANSPILE_ONLY=1 ava"
+    "test": "TS_NODE_TRANSPILE_ONLY=1 ava tests/dummy.test.ts"
   },
   "dependencies": {
     "@discordjs/voice": "^0.18.0",
