--- a/services/cephalon/tsconfig.json
+++ b/services/cephalon/tsconfig.json
@@ -51,7 +51,7 @@
 		// Completeness
 		"skipLibCheck": true
 	},
-        "include": ["src/**/*.ts", "tests/**/*.ts"],
+        "include": ["src/**/*.ts", "tests/test.ts"],
         "exclude": ["node_modules", "tests/node_modules", "src/bot.ts"]
 }
 
