--- a/services/voice/package.json
+++ b/services/voice/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "tsc",
     "start": "node dist/index.js",
-    "test": "TS_NODE_TRANSPILE_ONLY=1 ava tests/dummy.test.ts"
+    "test": "npm run build && ava dist/tests/**/*.js"
   },
   "dependencies": {
     "@discordjs/voice": "^0.18.0",
@@ -19,19 +19,11 @@
     "@types/express": "^4.17.21",
     "@types/node": "^22.10.10",
     "ava": "^6.4.1",
-    "ts-node": "^10.9.2",
     "typescript": "5.7.3"
   },
   "ava": {
-    "extensions": {
-      "ts": "module"
-    },
     "files": [
-      "tests/**/*.ts"
-    ],
-    "nodeArguments": [
-      "--loader",
-      "ts-node/esm"
+      "dist/tests/**/*.js"
     ]
   }
 }
