--- a/services/py/stt/Pipfile
+++ b/services/py/stt/Pipfile
@@ -11,6 +11,10 @@ numpy = "*"
 httpx = "*"
 
 [dev-packages]
+pytest = "*"
+pytest-cov = "*"
+flake8 = "*"
+black = "*"
 
 [requires]
 python_version = "3.12"
