--- a/services/py/stt_ws/Pipfile
+++ b/services/py/stt_ws/Pipfile
@@ -1,11 +1,20 @@
+
 [[source]]
 url = "https://pypi.org/simple"
 verify_ssl = true
 name = "pypi"
 
 [packages]
+fastapi = "*"
+transformers = "*"
+torch = "*"
+numpy = "*"
 
 [dev-packages]
+pytest = "*"
+pytest-cov = "*"
+flake8 = "*"
+black = "*"
 
 [requires]
 python_version = "3.12"
