--- a/.github/workflows/test-py.yml
+++ b/.github/workflows/test-py.yml
@@ -20,7 +20,7 @@ jobs:
 
 
       - name: Run tests
-        run: make test-python-services
+        run: make test-python
       # - name: Run tests with coverage
       #   run: make coverage
 
