--- a/Makefile.python
+++ b/Makefile.python
@@ -2,7 +2,7 @@ SERVICES_PY=services/py/stt services/py/tts services/py/discord_indexer services
 # Install dependencies =========================================================
 setup-shared-python:
 	cd shared/py
-	pipenv install --dev 
+	python -m pipenv install --dev
 setup-pipenv:
 	python -m pip install --upgrade pip
 	@echo "installing pipenv"
@@ -10,24 +10,24 @@ setup-pipenv:
 setup-python-services:
 	@echo "Setting up Python services..."
 	@for d in $(SERVICES_PY); do \
-		cd $$d && PIPENV_NOSPIN=1 pipenv install --dev  && cd - >/dev/null; \
+		cd $$d && PIPENV_NOSPIN=1 python -m pipenv install --dev  && cd - >/dev/null; \
 	done
 setup-python-service-%:
 	@echo "Setting up Python service: $*"
-	cd services/$* && PIPENV_NOSPIN=1 pipenv install --dev
+	cd services/$* && PIPENV_NOSPIN=1 python -m pipenv install --dev
 setup-python: setup-pipenv setup-python-services setup-shared-python
 # Run Tests=====================================================================
 test-python-service-%:
 	@echo "Running tests for Python service: $*"
-	cd services/py/$* && PIPENV_NOSPIN=1 pipenv run pytest tests/
+	cd services/py/$* && PIPENV_NOSPIN=1 python -m pipenv run pytest tests/
 test-python-services:
 	@for d in $(SERVICES_PY); do \
 		echo "Running tests in $$d...";\
-		cd $$d && PIPENV_NOSPIN=1 pipenv run pytest tests/ --cov=./ --cov-report=xml --cov-report=term && cd - >/dev/null; \
+		cd $$d && PIPENV_NOSPIN=1 python -m pipenv run pytest tests/ --cov=./ --cov-report=xml --cov-report=term && cd - >/dev/null; \
 	done
 
 test-shared-python:
-	cd shared/py && PIPENV_NOSPIN=1 pipenv run pytest tests/ --cov=./ --cov-report=xml --cov-report=term
+	cd shared/py && PIPENV_NOSPIN=1 python -m pipenv run pytest tests/ --cov=./ --cov-report=xml --cov-report=term
 test-python: test-python-services test-shared-python
 
 # Lint/formatting================================================================
