Python is so much fun to manage dependencies in.

--- a/services/py/tts/Pipfile
+++ b/services/py/tts/Pipfile
@@ -11,6 +11,11 @@ torch = "*"
 fastapi = "*"
 
 [dev-packages]
+pytest-cov = "*"
+pytest = "*"
+flake8 = "*"
+black = "*"
+anyio = "*"
 
 [requires]
 python_version = "3.12"
