Add coverage scripts and targets for JS and TS services

--- a/services/ts/cephalon/package.json
+++ b/services/ts/cephalon/package.json
@@ -8,6 +8,7 @@
         "build": "tsc && node scripts/patch-imports.js",
         "start": "node dist/src/index.js",
         "test": "npm run build && ava dist/tests/test.js",
+        "coverage": "npm run build && c8 ava \"dist/tests/**/*.js\"",
         "build:check": "tsc --noEmit --incremental false",
         "deploy": "npm run build && node --env-file=../../.env dist/util/deploy.js",
         "lint": "prettier --cache --check . && eslint src --ext mjs,js,ts --cache",
@@ -53,7 +54,8 @@
         "rimraf": "^6.0.1",
         "source-map-support": "^0.5.21",
         "ts-node": "^10.9.2",
-        "typescript": "5.7.3"
+        "typescript": "5.7.3",
+        "c8": "^9.1.0"
     },
     "ava": {
         "files": [
