--- a/services/js/vision/package.json
+++ b/services/js/vision/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "test": "ava"
+    "test": "ava",
+    "coverage": "c8 ava"
   },
   "dependencies": {
     "express": "^4.18.2",
@@ -13,7 +14,8 @@
   },
   "devDependencies": {
     "ava": "^6.4.1",
-    "supertest": "^6.3.3"
+    "supertest": "^6.3.3",
+    "c8": "^9.1.0"
   },
   "ava": {
     "extensions": {
