--- a/.github/workflows/test-py.yml
+++ b/.github/workflows/test-py.yml
@@ -21,8 +21,9 @@ jobs:
 
       - name: Run tests
         run: make test-python
-      # - name: Run tests with coverage
-      #   run: make coverage
+
+      - name: Generate coverage
+        run: make coverage-python
 
       - name: Upload Python coverage
         uses: actions/upload-artifact@v4
