Add Git LFS tracking and model download scripts

--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,10 @@ services/py/whisper_stream_ws/coverage.xml
 *.xml
 
 shared/py/.coverage
+
+# Allow model download helpers
+!services/py/tts/models/download.sh
+!services/py/tts/models/README.md
+!services/py/stt/whisper-npu/download.sh
+!services/py/stt/whisper-npu/README_LOCAL.md
+!agents/duck/scripts/download_chroma_data.sh
