--- a/services/ts/llm/package.json
+++ b/services/ts/llm/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node src/index.js",
     "test": "ava",
-    "coverage": "c8 ava"
+    "coverage": "c8 ava",
+    "build": "echo 'no build step'"
   },
   "dependencies": {
     "express": "^4.18.2",
