--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -28,6 +28,9 @@ jobs:
       - name: Install dependencies
         run: make install
 
+      - name: Install flake8
+        run: python -m pip install flake8
+
       - name: Build project
         run: make build
 
