--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -26,7 +26,7 @@ jobs:
           node-version: '20'
 
       - name: Install dependencies
-        run: make install
+        run: make setup
 
       - name: Install flake8
         run: python -m pip install flake8
