--- a/services/py/tts/Pipfile
+++ b/services/py/tts/Pipfile
@@ -10,6 +10,10 @@ safetensors = "*"
 torch = "*"
 fastapi = "*"
 uvicorn = "*"
+transformers = "*"
+protobuf = "*"
+g2p-en = "*"
+python-multipart = "*"
 
 [dev-packages]
 pytest-cov = "*"
