--- a/services/ts/discord-embedder/package.json
+++ b/services/ts/discord-embedder/package.json
@@ -1,13 +1,13 @@
 {
-	"name": "basic-bot",
+	"name": "DiscordEmbedder",
 	"version": "0.0.1",
 	"description": "A proof-of-concept basic bot using @discordjs/voice",
 	"main": "dist/index.js",
 	"type": "module",
-	"scripts": {
-		"build": "rimraf dist && tsc",
+    "scripts": {
+        "build": "tsc && node scripts/patch-imports.js",
 		"test": "ava",
-		"coverage": "npm run build && c8 ava \"dist/tests/**/*.js\"",
+		"coverage": "npm run build && c8 ava",
 		"build:check": "tsc --noEmit --incremental false",
 		"deploy": "npm run build && node --env-file=../../.env dist/util/deploy.js",
 		"lint": "prettier --cache --check . && eslint src --ext mjs,js,ts --cache",
@@ -55,11 +55,7 @@
 			"ts": "module"
 		},
 		"files": [
-			"tests/**/*.ts"
-		],
-		"nodeArguments": [
-			"--loader",
-			"ts-node/esm"
+			"./dist/tests/**/*.js"
 		]
 	}
 }
