--- a/services/ts/llm/package.json
+++ b/services/ts/llm/package.json
@@ -2,7 +2,7 @@
   "name": "llm-service",
   "version": "0.0.1",
   "type": "module",
-  "main": "index.js",
+  "main": "./src/index.js",
   "scripts": {
     "start": "node src/index.js",
     "test": "ava",
