--- a/.github/workflows/test-js.yml
+++ b/.github/workflows/test-js.yml
@@ -22,18 +22,16 @@ jobs:
         run: make system-deps  setup-js
 
 
-      - name: Run tests
-        run: make test-js
+        - name: Run tests
+          run: make test-js
 
-      # - name: Upload Python coverage
-      #   uses: actions/upload-artifact@v4
-      #   with:
-      #     name: python-coverage
-      #     path: coverage.xml
+        - name: Generate coverage report
+          run: make coverage-js
 
-      # - name: Upload JS coverage
-      #   uses: actions/upload-artifact@v4
-      #   with:
-      #     name: js-coverage
-      #     path: coverage
+        - name: Upload coverage to Codecov
+          uses: codecov/codecov-action@v3
+          with:
+            token: ${{ secrets.CODECOV_TOKEN }}
+            files: services/js/**/coverage/lcov.info
+            flags: js
 
