--- a/.github/workflows/test-ts.yml
+++ b/.github/workflows/test-ts.yml
@@ -23,17 +23,15 @@ jobs:
         run: make system-deps  setup-ts
 
 
-      - name: Run tests
-        run: make test-ts
+        - name: Run tests
+          run: make test-ts
 
-      # - name: Upload Python coverage
-      #   uses: actions/upload-artifact@v4
-      #   with:
-      #     name: python-coverage
-      #     path: coverage.xml
+        - name: Generate coverage report
+          run: make coverage-ts
 
-      # - name: Upload TS coverage
-      #   uses: actions/upload-artifact@v4
-      #   with:
-      #     name: ts-coverage
-      #     path: coverage
+        - name: Upload coverage to Codecov
+          uses: codecov/codecov-action@v3
+          with:
+            token: ${{ secrets.CODECOV_TOKEN }}
+            files: services/ts/**/coverage/lcov.info
+            flags: ts
