--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -16,27 +16,29 @@ jobs:
 
       - uses: actions/setup-python@v4
         with:
-          python-version: '3.11'
+          python-version: "3.11"
 
       - name: Install system dependencies
         run: make system-deps
 
       - uses: actions/setup-node@v3
         with:
-          node-version: '20'
+          node-version: "20"
 
       - name: Install dependencies
         run: make install
 
-      - name: Install flake8
-        run: python -m pip install flake8
+      - name: Install lint dependencies
+        run: python -m pip install flake8 pre-commit
 
       - name: Build project
         run: make build
+
+      - name: Pre-commit
+        run: pre-commit run --files $(git ls-files | tr '\n' ' ')
 
       - name: Lint
         run: make lint
 
       # - name: Format
       #   run: make format
-
