Document safe pre-commit command for spaced filenames

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -35,7 +35,8 @@ jobs:
         run: make build
 
       - name: Pre-commit
-        run: pre-commit run --files $(git ls-files | tr '\n' ' ')
+        run: |
+          git ls-files -z | xargs -0 pre-commit run --files
 
       - name: Lint
         run: make lint
