--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,3 +6,8 @@ repos:
         entry: python scripts/convert_wikilinks.py
         language: system
         files: '\.md$'
+      - id: add-tags-ollama
+        name: Append tags with ollama
+        entry: python scripts/add_tags_ollama.py
+        language: system
+        pass_filenames: false
