--- a/services/ts/file-watcher/package.json
+++ b/services/ts/file-watcher/package.json
@@ -18,15 +18,13 @@
     "@types/node": "^22.10.10",
     "ava": "^6.4.1",
     "c8": "^9.1.0",
+    "prettier": "^3.4.2",
     "ts-node": "^10.9.2",
     "typescript": "5.7.3"
   },
   "ava": {
-    "extensions": {
-      "ts": "module"
-    },
     "files": [
-      "dist/tests/**/*.ts"
+      "dist/tests/**/*.js"
     ]
   }
 }
