--- a/services/ts/file-watcher/package.json
+++ b/services/ts/file-watcher/package.json
@@ -8,7 +8,7 @@
     "start": "node dist/index.js",
     "start:dev": "node --loader ts-node/esm src/index.ts",
     "build:check": "tsc --noEmit --incremental false",
-    "test": "ava",
+    "test": "npm run build && ava",
     "coverage": "c8 ava"
   },
   "dependencies": {
