--- a/services/ts/file-watcher/tsconfig.json
+++ b/services/ts/file-watcher/tsconfig.json
@@ -44,6 +44,7 @@
     // Completeness
     "skipLibCheck": true
   },
-  "include": ["src/*.ts", "tests/*.ts"],
+
+  "include": ["src/**/*.ts", "tests/**/*.ts", "types/**/*.d.ts"],
   "exclude": ["node_modules"]
 }
