--- a/services/ts/discord-embedder/tsconfig.json
+++ b/services/ts/discord-embedder/tsconfig.json
@@ -48,6 +48,6 @@
 		// Completeness
 		"skipLibCheck": true
 	},
-	"include": ["src/**/*.ts"],
+	"include": ["src/**/*.ts", "tests/**/*.ts"],
 	"exclude": ["node_modules"]
 }
