--- a/.github/workflows/test-py.yml
+++ b/.github/workflows/test-py.yml
@@ -14,6 +14,13 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
+      - uses: actions/setup-python@v4
+        with:
+          python-version: "3.11"
+
+      - name: Install Hy
+        run: python -m pip install hy
+
       - name: Cache pip dependencies
         uses: actions/cache@v3
         with:
