--- a/.github/workflows/test-ts.yml
+++ b/.github/workflows/test-ts.yml
@@ -1,4 +1,3 @@
-
 name: TS Test Suite
 permissions:
   contents: read
@@ -19,6 +18,13 @@ jobs:
         with:
           node-version: '20'
 
+      - uses: actions/setup-python@v4
+        with:
+          python-version: "3.11"
+
+      - name: Install Hy
+        run: python -m pip install hy
+
       - name: Cache pip dependencies
         uses: actions/cache@v3
         with:
@@ -38,16 +44,16 @@ jobs:
       - name: Install dependencies
         run: make system-deps  setup-ts
 
+      - name: Run tests
+        run: make test-ts
 
-        - name: Run tests
-          run: make test-ts
+      - name: Generate coverage report
+        run: make coverage-ts
 
-        - name: Generate coverage report
-          run: make coverage-ts
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v3
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          files: services/ts/**/coverage/lcov.info
+          flags: ts
 
-        - name: Upload coverage to Codecov
-          uses: codecov/codecov-action@v3
-          with:
-            token: ${{ secrets.CODECOV_TOKEN }}
-            files: services/ts/**/coverage/lcov.info
-            flags: ts
