fix: add env typings and streamline cephalon tests

--- a/services/ts/cephalon/tsconfig.json
+++ b/services/ts/cephalon/tsconfig.json
@@ -45,6 +45,7 @@
 		"lib": ["ESNext", "esnext.disposable"],
 		"target": "ESNext",
 		"useDefineForClassFields": true,
+		"types": ["node", "ava"],
 
 		// Completeness
 		"skipLibCheck": true
