--- a/.github/workflows/test-js.yml
+++ b/.github/workflows/test-js.yml
@@ -43,7 +43,8 @@ jobs:
         uses: actions/cache@v3
         with:
           path: ~/.npm
-          key: ${{ runner.os }}-npm-${{ hashFiles('services/js/' + matrix.service + '/package-lock.json') }}
+
+          key: ${{ runner.os }}-pip-${{ hashFiles(format('services/js/{0}/package-lock.json', matrix.service)) }}
           restore-keys: |
             ${{ runner.os }}-npm-
 
