--- a/services/ts/board-updater/tsconfig.json
+++ b/services/ts/board-updater/tsconfig.json
@@ -49,6 +49,6 @@
     // Completeness
     "skipLibCheck": true
   },
-  "include": ["src/**/*.ts", "src/**/*.d.ts", "tests/**/*.ts"],
+  "include": ["src/**/*.ts", "tests/**/*.ts"],
   "exclude": ["node_modules"]
 }
