--- a/services/ts/kanban-processor/package.json
+++ b/services/ts/kanban-processor/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "file-watcher",
+  "name": "kanban-processor",
   "version": "0.1.0",
   "main": "dist/index.js",
   "type": "module",
@@ -15,7 +15,7 @@
     "format": "prettier --cache --write . && eslint . --fix --cache || true"
   },
   "dependencies": {
-    "chokidar": "^3.5.3",
+    "mongodb": "^6.17.0",
     "ws": "^8.18.0"
   },
   "devDependencies": {
