--- a/.github/workflows/lint-js.yml
+++ b/.github/workflows/lint-js.yml
@@ -48,7 +48,7 @@ jobs:
             ${{ runner.os }}-npm-
 
       - name: Install dependencies
-        run: make system-deps setup-js-service-${{ matrix.service }} setup-shared-js
+        run: make system-deps setup-js-service-${{ matrix.service }} 
 
       - name: Lint
         run: make lint-js-service-${{ matrix.service }}
