feat: add websocket gateway and metrics

--- a/shared/js/prom-lib/tsconfig.json
+++ b/shared/js/prom-lib/tsconfig.json
@@ -15,6 +15,11 @@
     "event/**/*.ts",
     "ds/**/*.ts",
     "worker/**/*.ts",
-    "intention/**/*.ts"
+    "intention/**/*.ts",
+    "ws/**/*.ts",
+    "compaction/**/*.ts",
+    "metrics/**/*.ts",
+    "examples/**/*.ts",
+    "http/**/*.ts"
   ]
 }
