--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "mongodb": "^6.18.0",
     "pm2": "^6.0.8",
     "ws": "^8.18.3",
+    "yaml": "^2.8.1",
     "zod": "^3.25.76"
   },
   "devDependencies": {
