--- a/services/js/health/package.json
+++ b/services/js/health/package.json
@@ -9,6 +9,7 @@
     "coverage": "c8 ava"
   },
   "dependencies": {
+    "@shared/js": "file:../../../shared/js",
     "express": "^4.18.2",
     "ws": "^8.17.0"
   },
