--- a/services/js/heartbeat/package.json
+++ b/services/js/heartbeat/package.json
@@ -9,6 +9,7 @@
     "coverage": "c8 ava"
   },
   "dependencies": {
+    "@shared/js": "file:../../../shared/js",
     "mongodb": "^6.8.0",
     "pidusage": "^3.0.2",
     "ws": "^8.18.0"
