--- a/services/ts/cephalon/package.json
+++ b/services/ts/cephalon/package.json
@@ -4,9 +4,6 @@
 	"description": "A proof-of-concept basic bot using @discordjs/voice",
 	"main": "dist/index.js",
 	"type": "module",
-	"imports": {
-		"@shared": "../..../../../shared/"
-	},
 	"scripts": {
 		"build": "tsc && node scripts/patch-imports.js",
 		"start": "node dist/index.js",
@@ -51,7 +48,8 @@
 		"sbd": "^1.0.19",
 		"wav": "^1.0.2",
 		"wav-decoder": "^1.3.0",
-		"ws": "^8.17.0"
+		"ws": "^8.17.0",
+		"@shared/js": "file:../../../shared/js"
 	},
 	"devDependencies": {
 		"@types/node": "^22.17.0",
