--- a/services/ts/kanban-processor/package.json
+++ b/services/ts/kanban-processor/package.json
@@ -15,6 +15,7 @@
     "format": "prettier --cache --write . && eslint . --fix --cache || true"
   },
   "dependencies": {
+    "@shared/js": "file:../../../shared/js",
     "mongodb": "^6.17.0",
     "ws": "^8.18.0"
   },
