--- a/shared/ts/package.json
+++ b/shared/ts/package.json
@@ -17,6 +17,7 @@
     "dependencies": {
         "body-parser": "^1.20.2",
         "chromadb": "^3.0.14",
+        "duckduckgo-search": "^1.0.7",
         "express": "^4.19.2",
         "mongodb": "^6.18.0",
         "prom-client": "^15.1.0",
