--- a/shared/sibilant/package.json
+++ b/shared/sibilant/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "sibilant",
+    "name": "lith",
     "version": "1.0.0",
     "description": "",
     "main": "index.js",
@@ -10,6 +10,11 @@
     "author": "",
     "license": "GPL-3.0-only",
     "dependencies": {
+        "cardinal": "^2.1.1",
+        "source-map": "^0.7.6",
         "source-map-support": "^0.5.21"
+    },
+    "bin": {
+        "lith": "./bin/lith.js"
     }
 }
