--- a/shared/ts/package.json
+++ b/shared/ts/package.json
@@ -14,6 +14,17 @@
     "bin": {
         "prom-lisp": "dist/cli/lisp.js"
     },
+    "main": "dist/index.cjs",
+    "module": "dist/index.js",
+    "types": "dist/index.d.ts",
+    "exports": {
+        ".": {
+            "types": "./dist/index.d.ts",
+            "import": "./dist/index.js",
+            "require": "./dist/index.cjs"
+        },
+        "./dist/*": "./dist/*"
+    },
     "dependencies": {
         "@types/javascript-time-ago": "^2.5.0",
         "body-parser": "^1.20.2",
